--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1198,6 +1198,25 @@ EOF Footer css
 
 /* Arrow bounce */
 
+@import "compass/css3";
+
+@include keyframes(bounce) {
+	0%, 20%, 50%, 80%, 100% {
+    @include transform(translateY(0));
+  }
+	40% {
+    @include transform(translateY(-30px));
+  }
+	60% {
+    @include transform(translateY(-15px));
+  }
+}
+
+
+body {
+  background: black;
+}
+
 .arrow {
   position: fixed;
   bottom: 0;
