--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1214,12 +1214,11 @@ url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz
 
 .bounce {
 	position: absolute;
-	bottom: 30px;
-	left: 50% ;
+	bottom: 0px;
 	width: 60px;
 	height: 60px ;
 	margin-left:-30px;
-	border: 2px solid #999999;
+	border: none;
 	-webkit-border-radius:50%;
 	-moz-border-radius:50%;
 	-ms-border-radius:50%;
