--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -214,19 +214,13 @@ blockquote:after {
   display: block;
   font-size: 13px;
   line-height: 18px;
-  margin: 10px 0 0;
+  margin: 10px 0;
   padding: 5px 10px;
   text-align: center;
 }
 
 .morecontent span {
   display: none;
-}
-
-.floated-box button {
-  display: block;
-  margin: 15px auto 5px;
-  padding: 6px 12px;
 }
 
 /*--EOF Floated box--*/
