--- a/css/stylesheet-responsive.css
+++ b/css/stylesheet-responsive.css
@@ -39,6 +39,18 @@
 
 @media all and (max-width:768px) {
 
+  #home .home-text-block h1.white {
+    font-size: 64px;
+  }
+
+  #home .home-text-block p.home-fixed-text.white {
+    font-size: 23px;
+  }
+  
+  .arrow {
+    position: relative;
+  }
+
   #slideshow-block .slideshow-block-content {
     width: 100%;
   }
@@ -52,7 +64,7 @@
     margin: 0 0 20px;
     width: 100%;
   }
-  
+
   .tm-slider-botttom-wrapper .tm-content-row {
     height: auto;
   }
@@ -65,6 +77,16 @@
 }
 
 @media screen and (max-width: 480px){
+  
+  #home .home-text-block h1.white {
+    font-size: 56px;
+    text-align: center;
+  }
+
+  #home .home-text-block p.home-fixed-text.white {
+    font-size: 20px;
+    text-align: center;
+  }
   
   .home-inner {
     top: 35%;
@@ -146,6 +168,15 @@
 }
 
 @media screen and (max-width: 380px){
+  
+  #home .home-text-block h1.white {
+    font-size: 50px;
+  }
+
+  #home .home-text-block p.home-fixed-text.white {
+    font-size: 18px;
+  }
+  
   #image-gallery .col-xxs-12 {
     width:100%;
   }
