--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,7 +45,7 @@ a, button {
 }
 
 button {
-  background-color: #3f3f3f;
+  background-color: #3d8d52;
   border: 0 none;
   border-radius: 4px;
   color: #ffffff;
@@ -68,13 +68,13 @@ a:focus {
 }
 
 .btn:hover {
-  color: #b88c2d;
+  color: #3F3F3F;
   outline: medium none;
   text-decoration: none;
 }
 
 .btn.focus, .btn:focus {
-  color: #b88c2d;
+  color: #3F3F3F;
   outline: medium none;
   text-decoration: none;
 }
