--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -292,6 +292,12 @@ h6.note {
   background-image: none;
 }
 
+body.modal-open,
+.modal-open .navbar-fixed-top,
+.modal-open .navbar-fixed-bottom {
+    margin-right: 0;
+}
+
 /*=======================================
 EOF Common Css
 =========================================*/
